adding css and href for a

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="header">
 
+    <header>
         <div class="header-menu">
 
             <div class="wrapper flex">
@@ -26,7 +26,7 @@
                     </ul>
                 </div>
                 <div class="social flex">
-                    <a href=""><img src="img/facebook.png" alt=""></a>
+                    <a href=""><img src="img/fb.png" alt=""></a>
                     <a href=""><img src="img/twitter.png" alt=""></a>
                     <a href=""><img src="img/inst.png" alt=""></a>
 
@@ -36,7 +36,7 @@
         <div class="company ">
             <div class="wrapper flex">
                 <div class="logo">
-                    <a href=""><img src="img/logo.png" alt=""></a>
+                    <a href="#"><img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="contacts flex">
 
@@ -55,20 +55,22 @@
             </div>
 
         </div>
-
+    </header>
     </div>
-    <div class="main">
+    <main>
         <div class="banner">
             <div class="text">
                 <p class="text1">Пропозиція місяця</p>
                 <p class="text2">Ми пропонуємо великий вибір котеджів “під ключ” за самими низькими цінами!</p>
-                <p class="text3"><b>5999</b> грн / м2</p>
+                <p class="text3"><b>5999</b> грн / м<sup>2</sup></p>
             </div>
         </div>
         <div class="wrapper flex">
             <div>
                 <div class="maininfo">
-                    <h1>Компанія “Хата Плюс”</h1>
+                    <article>
+                        <h1>Компанія “Хата Плюс”</h1>
+                    </article>
                     <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж і насолоджуватися життям в
                         гармонії з
                         природою. Дійсно, для багатьох жителів мегаполісу заміська нерухомість під містом стала
@@ -83,18 +85,19 @@
                         альтанку
                         і барбекю.</p>
                     <a href="">Детальніше про нас</a>
+                    <hr>
                 </div>
 
                 <div class="popular-project">
                     <h2>Популярні проекти</h2>
                     <div class="flex">
                         <div class="edmonton house">
+                        <img src="img/Edmonton.jpg" alt="">
 
-                            <img src="img/Edmonton.jpg" alt="">
                             <a href="edmonton.html">
-                                <h2>EDMONTON (338 м2)</h2>
+                                <h2>EDMONTON (338 м<sup>2</sup>)</h2>
                             </a>
-                            <p>Загальна площа будови: 312 м2</p>
+                            <p>Загальна площа будови: 312 м<sup>2</sup></p>
                             <p> Кількість спалень: 4</p>
                             <p>Гараж: 2 авто</p>
                         </div>
@@ -102,77 +105,117 @@
 
                             <img src="img/Montreal.jpg" alt="">
                             <a href="">
-                                <h2>MONTREAL (332 м2)</h2>
+                                <h2>MONTREAL (332 м<sup>2</sup>)</h2>
                             </a>
-                            <p>Загальна площа будови: 290 м2</p>
+                            <p>Загальна площа будови: 290 м<sup>2</sup></p>
                             <p>Кількість спалень: 3</p>
                             <p>Гараж: 2 авто</p>
                         </div>
                         <div class="calgary house">
                             <img src="img/Calgary.jpg" alt="">
                             <a href="">
-                                <h2>CALGARY (294 м2)</h2>
+                                <h2>CALGARY (294 м<sup>2</sup>)</h2>
                             </a>
-                            <p>Загальна площа будови: 272 м2</p>
+                            <p>Загальна площа будови: 272 м<sup>2</sup></p>
                             <p>Кількість спалень: 3</p>
                             <p>Гараж: 2 авто</p>
                         </div>
                     </div>
+
+                </div>
+
+            </div>
+            <aside>
+                <div class="category-project ">
+                    <p>Категорії проектів</p>
+                    <nav>
+                        <ul>
+                            <li><a href="">Генеральний план <img src="img/click.png" alt=""></a>
+                                <ul>
+                                    <a href="#">Lorem, ipsum dolor.</a>
+                                    <a href="#">Lorem, ipsum dolor.</a>
+                                    <a href="#">Lorem, ipsum dolor.</a>
+
+                                </ul>
+
+                            </li>
+                            <li><a href="">Навколишнє середовище <img src="img/click.png" alt=""></a>
+                                <ul>
+                                    <li><a href="#">Продані</a></li>
+                                    <li><a href="#">Заброньованні</a></li>
+                                    <li><a href="#">В процесі будівництва</a></li>
+                                </ul>
+
+                            </li>
+
+                            <li><a href="">Умови придбання <img src="img/click.png" alt=""></a>
+                                <ul><a href="#">Lorem</a>
+                                    <a href="#">Lorem, ipsum.</a>
+                                    <a href="#">Lorem, ipsum.</a>
+                                </ul>
+                            </li>
+                            <li><a href="">Загородні котеджі <img src="img/click.png" alt=""></a>
+                                <ul><a href="#">Lorem, ipsum.</a>
+                                    <a href="#">Lorem, ipsum.</a>
+                                    <a href="#">Lorem, ipsum dolor.</a>
+                                </ul>
+
+                            </li>
+                            <li><a href="">Інфраструктура <img src="img/click.png" alt=""></a>
+                                <ul>
+                                    <a href="#">Lorem, ipsum. </a>
+                                    <a href="#">Lorem, ipsum dolor.</a>
+                                    <a href="#">Lorem, ipsum dolor.</a>
+                                </ul>
+
+                            </li>
+                            <li><a href="">Готові будинки <img src="img/click.png" alt=""></a>
+                                <ul>
+                                    <a href="#">Lorem, ipsum.</a>
+                                    <a href="#">Lorem, ipsum.</a>
+                                    <a href="#">Lorem, ipsum.</a>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+
+
+                </div>
+            </aside>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="wrapper flex">
+                <div class="footer-info1 info">
+                    <ul>
+                        <li><a href="#">Будинки</a></li>
+                        <li><a href="#">Інфраструктура</a></li>
+                        <li><a href="#">Сервіс</a></li>
+                        <li><a href="#">Новини</a></li>
+                    </ul>
+                </div>
+                <div class="footer-info2 info">
+                    <ul>
+                        <li><a href="#">Про компанію</a></li>
+                        <li><a href="#">Страхування</a></li>
+                        <li><a href="#">Контакти</a></li>
+                    </ul>
+                </div>
+                <div class="contacts flex">
+                    <a href="tel:380971002525">+38(097) 100-25-25</a>
+                    <a href="tel:380971002525">+38(097) 100-25-25</a>
+                </div>
+                <div class="email flex">
+                    <a href="#">hataplus@hata.com.ua</a>
+                    <a class="email1" href="">hataplus</a>
                 </div>
             </div>
-
-
-            <div class="category-project ">
-                <p>Категорії проектів</p>
-                <ul>
-
-                    <li>Генеральний план</li>
-                    <li>Навколишнє середовище</li>
-                    <li>Продані</li>
-                    <li>Заброньованні</li>
-                    <li>В процесі будівництва</li>
-                    <li>Умови придбання</li>
-                    <li>Загородні котеджі</li>
-                    <li>Інфраструктура</li>
-                    <li>Готові будинки</li>
-                </ul>
-
+            <div class="footer-bottom ">
+                <p>© Будівельна компанія “Хата Плюс” 2018.</p>
             </div>
         </div>
-
-
-    </div>
-    <div class="footer">
-        <div class="wrapper flex">
-            <div class="footer-info1">
-                <ul>
-                    <li><a href="">Будинки</a></li>
-                    <li><a href="">Інфраструктура</a></li>
-                    <li><a href="">Сервіс</a></li>
-                    <li><a href="">Новини</a></li>
-                </ul>
-            </div>
-            <div class="footer-info2">
-                <ul>
-                    <li><a href="">Про компанію</a></li>
-                    <li><a href="">Страхування</a></li>
-                    <li><a href="">Контакти</a></li>
-                </ul>
-            </div>
-            <div class="contacts flex">
-                <a href="tel:380971002525">+38(097) 100-25-25</a>
-                <a href="tel:380971002525">+38(097) 100-25-25</a>
-            </div>
-            <div class="email flex">
-                <a href="">hataplus@hata.com.ua</a>
-                <a href="">hataplus</a>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>© Будівельна компанія “Хата Плюс” 2018.</p>
-        </div>
-    </div>
-
+    </footer>
 </body>
 
 </html>
