--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <div class="popular-project">
                     <h2>Популярні проекти</h2>
                     <div class="flex">
-                        <div class="edmonton house">
-                        <img src="img/Edmonton.jpg" alt="">
+                        <figure class="edmonton house">
+                            <img src="img/Edmonton.jpg" alt="">
 
                             <a href="edmonton.html">
                                 <h2>EDMONTON (338 м<sup>2</sup>)</h2>
@@ -100,9 +100,9 @@
                             <p>Загальна площа будови: 312 м<sup>2</sup></p>
                             <p> Кількість спалень: 4</p>
                             <p>Гараж: 2 авто</p>
-                        </div>
-                        <div class="montreal house">
-
+                        </figure>
+                       
+                        <figure class="house Montreal">
                             <img src="img/Montreal.jpg" alt="">
                             <a href="">
                                 <h2>MONTREAL (332 м<sup>2</sup>)</h2>
@@ -110,8 +110,8 @@
                             <p>Загальна площа будови: 290 м<sup>2</sup></p>
                             <p>Кількість спалень: 3</p>
                             <p>Гараж: 2 авто</p>
-                        </div>
-                        <div class="calgary house">
+                        </figure>
+                        <figure class="calgary house">
                             <img src="img/Calgary.jpg" alt="">
                             <a href="">
                                 <h2>CALGARY (294 м<sup>2</sup>)</h2>
@@ -119,7 +119,8 @@
                             <p>Загальна площа будови: 272 м<sup>2</sup></p>
                             <p>Кількість спалень: 3</p>
                             <p>Гараж: 2 авто</p>
-                        </div>
+                        </figure>
+
                     </div>
 
                 </div>
