--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
                     </ul>
                 </div>
-                <div class="social flex">
-                    <a href=""><img src="img/fb.png" alt=""></a>
-                    <a href=""><img src="img/twitter.png" alt=""></a>
-                    <a href=""><img src="img/inst.png" alt=""></a>
+                <ul class="social flex">
+                    <li><a href="#" class="tw"></a></li>
+                    <li><a href="#"class="fb"></a></li>
+                    <li><a href="#"class="in"></a> </li>
+                </ul>
 
-                </div>
             </div>
         </div>
         <div class="company ">
@@ -101,7 +101,7 @@
                             <p> Кількість спалень: 4</p>
                             <p>Гараж: 2 авто</p>
                         </figure>
-                       
+
                         <figure class="house Montreal">
                             <img src="img/Montreal.jpg" alt="">
                             <a href="">
