--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     </ul>
                 </div>
                 <ul class="social flex">
-                    <li><a href="#" class="tw"></a></li>
                     <li><a href="#"class="fb"></a></li>
+                    <li><a href="#" class="tw"></a></li>
                     <li><a href="#"class="in"></a> </li>
                 </ul>
 
@@ -40,14 +40,14 @@
                 </div>
                 <div class="contacts flex">
 
-                    <a href="tel:+380971002525">+38(097) 100-25-25</a>
+                    <a class="icon" href="tel:+380971002525">+38(097) 100-25-25</a>
                     <a href="tel:+380971002525">+38(097) 100-25-25</a>
 
                 </div>
                 <div class="email flex">
 
-                    <a href="mailto">hataplus@hata.com.ua</a>
-                    <a href="mailto">hataplus</a>
+                    <a class="mail" href="mailto">hataplus@hata.com.ua</a>
+                    <a class="skype" href="mailto">hataplus</a>
                 </div>
                 <div class="buttom">
                     <a href="">Замовити Дзвінок</a>
@@ -131,16 +131,15 @@
                     <p>Категорії проектів</p>
                     <nav>
                         <ul>
-                            <li><a href="">Генеральний план <img src="img/click.png" alt=""></a>
+                            <li><a class="proga" href="">Генеральний план </a>
                                 <ul>
-                                    <a href="#">Lorem, ipsum dolor.</a>
-                                    <a href="#">Lorem, ipsum dolor.</a>
-                                    <a href="#">Lorem, ipsum dolor.</a>
-
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
                                 </ul>
 
                             </li>
-                            <li><a href="">Навколишнє середовище <img src="img/click.png" alt=""></a>
+                            <li><a class="proga" href="">Навколишнє середовище </a>
                                 <ul>
                                     <li><a href="#">Продані</a></li>
                                     <li><a href="#">Заброньованні</a></li>
@@ -149,32 +148,32 @@
 
                             </li>
 
-                            <li><a href="">Умови придбання <img src="img/click.png" alt=""></a>
-                                <ul><a href="#">Lorem</a>
-                                    <a href="#">Lorem, ipsum.</a>
-                                    <a href="#">Lorem, ipsum.</a>
+                            <li><a class="proga">Умови придбання </a>
+                                <ul><li><a href="#">Lorem</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Загородні котеджі <img src="img/click.png" alt=""></a>
-                                <ul><a href="#">Lorem, ipsum.</a>
-                                    <a href="#">Lorem, ipsum.</a>
-                                    <a href="#">Lorem, ipsum dolor.</a>
-                                </ul>
-
-                            </li>
-                            <li><a href="">Інфраструктура <img src="img/click.png" alt=""></a>
-                                <ul>
-                                    <a href="#">Lorem, ipsum. </a>
-                                    <a href="#">Lorem, ipsum dolor.</a>
-                                    <a href="#">Lorem, ipsum dolor.</a>
+                            <li><a class="proga">Загородні котеджі </a>
+                                <ul><li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
                                 </ul>
 
                             </li>
-                            <li><a href="">Готові будинки <img src="img/click.png" alt=""></a>
+                            <li><a class="proga" href="">Інфраструктура </a>
                                 <ul>
-                                    <a href="#">Lorem, ipsum.</a>
-                                    <a href="#">Lorem, ipsum.</a>
-                                    <a href="#">Lorem, ipsum.</a>
+                                    <li><a href="#">Lorem, ipsum. </a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                   <li> <a href="#">Lorem, ipsum dolor.</a></li>
+                                </ul>
+
+                            </li>
+                            <li><a class="proga">Готові будинки </a>
+                                <ul>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -204,12 +203,12 @@
                     </ul>
                 </div>
                 <div class="contacts flex">
-                    <a href="tel:380971002525">+38(097) 100-25-25</a>
+                    <a class="icon" href="tel:380971002525">+38(097) 100-25-25</a>
                     <a href="tel:380971002525">+38(097) 100-25-25</a>
                 </div>
                 <div class="email flex">
-                    <a href="#">hataplus@hata.com.ua</a>
-                    <a class="email1" href="">hataplus</a>
+                    <a class="mail" href="#">hataplus@hata.com.ua</a>
+                    <a class="email1 skype" href="">hataplus</a>
                 </div>
             </div>
             <div class="footer-bottom ">
