--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ХАТА ПЛЮС</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,18 +20,18 @@
 
                 <div class="menu">
                     <ul class="flex">
-                        <li><a href="">Головна</a></li>
-                        <li><a href="">Про компанію</a></li>
-                        <li><a href="">Наші будівлі</a></li>
-                        <li><a href="">Акції</a></li>
-                        <li><a href="">Контакти</a></li>
+                        <li><a href="#">Головна</a></li>
+                        <li><a href="#">Про компанію</a></li>
+                        <li><a href="#">Наші будівлі</a></li>
+                        <li><a href="#">Акції</a></li>
+                        <li><a href="#">Контакти</a></li>
 
                     </ul>
                 </div>
                 <ul class="social flex">
-                    <li><a href="#"class="fb"></a></li>
+                    <li><a href="#" class="fb"></a></li>
                     <li><a href="#" class="tw"></a></li>
-                    <li><a href="#"class="in"></a> </li>
+                    <li><a href="#" class="in"></a> </li>
                 </ul>
 
             </div>
@@ -149,13 +152,15 @@
                             </li>
 
                             <li><a class="proga">Умови придбання </a>
-                                <ul><li><a href="#">Lorem</a></li>
+                                <ul>
+                                    <li><a href="#">Lorem</a></li>
                                     <li><a href="#">Lorem, ipsum.</a></li>
                                     <li><a href="#">Lorem, ipsum.</a></li>
                                 </ul>
                             </li>
                             <li><a class="proga">Загородні котеджі </a>
-                                <ul><li><a href="#">Lorem, ipsum.</a></li>
+                                <ul>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
                                     <li><a href="#">Lorem, ipsum.</a></li>
                                     <li><a href="#">Lorem, ipsum dolor.</a></li>
                                 </ul>
@@ -165,7 +170,7 @@
                                 <ul>
                                     <li><a href="#">Lorem, ipsum. </a></li>
                                     <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                   <li> <a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li> <a href="#">Lorem, ipsum dolor.</a></li>
                                 </ul>
 
                             </li>
