adding contacts-page

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
                 <div class="menu">
                     <ul class="flex">
-                        <li><a href="#">Головна</a></li>
+                        <li><a href="/">Головна</a></li>
                         <li><a href="#">Про компанію</a></li>
                         <li><a href="#">Наші будівлі</a></li>
                         <li><a href="#">Акції</a></li>
-                        <li><a href="#">Контакти</a></li>
+                        <li><a href="contacts.html">Контакти</a></li>
 
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
         <div class="company ">
             <div class="wrapper flex">
                 <div class="logo">
-                    <a href="#"><img src="img/logo.png" alt=""></a>
+                    <a href="/"><img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="contacts flex">
 
