--- a/contacts.html
+++ b/contacts.html
@@ -84,7 +84,39 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <div class="wrapper every">
 
+            <div class="google-maps">
+                <iframe
+                    src="https://www.google.com/maps/d/u/0/embed?mid=1XS0p7cuGNW_njz1lBqkS1F9xPiML2lk&ehbc=2E312F"></iframe>
+            </div>
+    
+            <div class="form-name-main">
+                <h2>Форма зворотнього зв’язку</h2>
+                <form action="" method="post">
+                    <div class="tel-name">
+                        <label for=""><input type="text" placeholder="Ваше ім’я"></label>
+                        <label for=""><input type="text" placeholder="Телефон"></label>
+                    </div>
+                    <div class="theme-text">
+                        <label for=""><input type="text" placeholder="Тема повідомлення"></label>
+                    </div>
+                    <div class="textarea">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Текст"></textarea>
+                    </div>
+                    <div class="submit-checkbox">
+                        <div class="submit-form">
+                            <button type="submit">Відправити</button>
+                        </div>
+                        <div class="checkbox-form">
+                            <input type="checkbox"><label for="">Я бажаю отримувати останні новини</label>
+                        </div>
+                    </div>
+    
+                </form>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer">
