--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul class="flex">
                         <li><a href="/">Головна</a></li>
                         <li><a href="#">Про компанію</a></li>
-                        <li><a href="#">Наші будівлі</a></li>
+                        <li><a href="price.html">Наші будівлі</a></li>
                         <li><a href="#">Акції</a></li>
                         <li><a href="contacts.html">Контакти</a></li>
 
