adding new home

--- a/price.html
+++ b/price.html
@@ -125,7 +125,7 @@
             </table>
             <p>Час заселення з 14-00, виїзд до 12-00.
                 Можлива погодинна оренда котеджу (мінімальний час оренди - 5 днів).</p>
-            <a href="#">Ознайомитись з правилами проживання</a>
+            <a class="rules" href="#">Ознайомитись з правилами проживання</a>
 
 
 
@@ -162,6 +162,16 @@
                         <p>Гараж: 2 авто</p>
                     </figure>
 
+                    <figure class="edmonton house">
+                        <img src="img/richmond.png" alt="">
+
+                        <a href="edmonton.html">
+                            <h2>RICHMOND (324 м<sup>2</sup>)</h2>
+                        </a>
+                        <p>Загальна площа будови: 242 м<sup>2</sup></p>
+                        <p> Кількість спалень: 3</p>
+                        <p>Гараж: 3 авто</p>
+                    </figure>
                 </div>
 
             </div>
