--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                 <div class="popular-project">
                     <h2>Популярні проекти</h2>
-                    <div class="flex">
+                    <div class="project flex">
                         <figure class="edmonton house">
                             <img src="img/Edmonton.jpg" alt="">
 
