--- a/index.html
+++ b/index.html
@@ -13,214 +13,187 @@
 
 <body>
 
-    <header>
-        <div class="header-menu">
-
-            <div class="wrapper flex">
-
-                <div class="menu">
-                    <ul class="flex">
-                        <li><a href="/">Головна</a></li>
-                        <li><a href="#">Про компанію</a></li>
-                        <li><a href="price.html">Наші будівлі</a></li>
-                        <li><a href="#">Акції</a></li>
-                        <li><a href="contacts.html">Контакти</a></li>
-
-                    </ul>
-                </div>
-                <ul class="social flex">
-                    <li><a href="#" class="fb"></a></li>
-                    <li><a href="#" class="tw"></a></li>
-                    <li><a href="#" class="in"></a> </li>
-                </ul>
-
-            </div>
-        </div>
-        <div class="company ">
-            <div class="wrapper flex">
-                <div class="logo">
-                    <a href="/"><img src="img/logo.png" alt=""></a>
-                </div>
-                <div class="contacts flex">
-
-                    <a class="icon" href="tel:+380971002525">+38(097) 100-25-25</a>
-                    <a href="tel:+380971002525">+38(097) 100-25-25</a>
-
-                </div>
-                <div class="email flex">
-
-                    <a class="mail" href="mailto">hataplus@hata.com.ua</a>
-                    <a class="skype" href="mailto">hataplus</a>
-                </div>
-                <div class="buttom">
-                    <a href="">Замовити Дзвінок</a>
-                </div>
-            </div>
-
-        </div>
-    </header>
-    </div>
-    <main>
-        <div class="banner">
-            <div class="text">
-                <p class="text1">Пропозиція місяця</p>
-                <p class="text2">Ми пропонуємо великий вибір котеджів “під ключ” за самими низькими цінами!</p>
-                <p class="text3"><b>5999</b> грн / м<sup>2</sup></p>
-            </div>
-        </div>
+    <div class="header-menu">
         <div class="wrapper flex">
-            <div>
-                <div class="maininfo">
-                    <article>
-                        <h1>Компанія “Хата Плюс”</h1>
-                    </article>
-                    <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж і насолоджуватися життям в
-                        гармонії з
-                        природою. Дійсно, для багатьох жителів мегаполісу заміська нерухомість під містом стала
-                        справжньою
-                        віддушиною і порятунком від сумній життя в багатоповерхівках спальних районів.</p>
-                    <p>Крім цього, заміські котеджі “Хата Плюс” від забудовника — це найбільш вигідна цінова пропозиція
-                        по
-                        співвідношенню площа / вартість, оскільки у вартість домоволодіння входить також земельна
-                        ділянка,
-                        на
-                        якому можна не тільки посадити сад, але облаштувати зону відпочинку, спорудити сауну, поставити
-                        альтанку
-                        і барбекю.</p>
-                    <a href="">Детальніше про нас</a>
-                    <hr>
-                </div>
-
-                <div class="popular-project">
-                    <h2>Популярні проекти</h2>
-                    <div class="project flex">
-                        <figure class="edmonton house">
-                            <img src="img/Edmonton.jpg" alt="">
-
-                            <a href="edmonton.html">
-                                <h2>EDMONTON (338 м<sup>2</sup>)</h2>
-                            </a>
-                            <p>Загальна площа будови: 312 м<sup>2</sup></p>
-                            <p> Кількість спалень: 4</p>
-                            <p>Гараж: 2 авто</p>
-                        </figure>
-
-                        <figure class="house Montreal">
-                            <img src="img/Montreal.jpg" alt="">
-                            <a href="">
-                                <h2>MONTREAL (332 м<sup>2</sup>)</h2>
-                            </a>
-                            <p>Загальна площа будови: 290 м<sup>2</sup></p>
-                            <p>Кількість спалень: 3</p>
-                            <p>Гараж: 2 авто</p>
-                        </figure>
-                        <figure class="calgary house">
-                            <img src="img/Calgary.jpg" alt="">
-                            <a href="">
-                                <h2>CALGARY (294 м<sup>2</sup>)</h2>
-                            </a>
-                            <p>Загальна площа будови: 272 м<sup>2</sup></p>
-                            <p>Кількість спалень: 3</p>
-                            <p>Гараж: 2 авто</p>
-                        </figure>
-
-                    </div>
-
-                </div>
-
+            <div class="menu">
+                <ul class="flex">
+                    <li><a href="/">Головна</a></li>
+                    <li><a href="#">Про компанію</a></li>
+                    <li><a href="price.html">Наші будівлі</a></li>
+                    <li><a href="#">Акції</a></li>
+                    <li><a href="contacts.html">Контакти</a></li>
+                </ul>
             </div>
-            <aside>
-                <div class="category-project ">
-                    <p>Категорії проектів</p>
-                    <nav>
-                        <ul>
-                            <li><a class="proga" href="">Генеральний план </a>
-                                <ul>
-                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                </ul>
-
-                            </li>
-                            <li><a class="proga" href="">Навколишнє середовище </a>
-                                <ul>
-                                    <li><a href="#">Продані</a></li>
-                                    <li><a href="#">Заброньованні</a></li>
-                                    <li><a href="#">В процесі будівництва</a></li>
-                                </ul>
-
-                            </li>
-
-                            <li><a class="proga">Умови придбання </a>
-                                <ul>
-                                    <li><a href="#">Lorem</a></li>
-                                    <li><a href="#">Lorem, ipsum.</a></li>
-                                    <li><a href="#">Lorem, ipsum.</a></li>
-                                </ul>
-                            </li>
-                            <li><a class="proga">Загородні котеджі </a>
-                                <ul>
-                                    <li><a href="#">Lorem, ipsum.</a></li>
-                                    <li><a href="#">Lorem, ipsum.</a></li>
-                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                </ul>
-
-                            </li>
-                            <li><a class="proga" href="">Інфраструктура </a>
-                                <ul>
-                                    <li><a href="#">Lorem, ipsum. </a></li>
-                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                    <li> <a href="#">Lorem, ipsum dolor.</a></li>
-                                </ul>
-
-                            </li>
-                            <li><a class="proga">Готові будинки </a>
-                                <ul>
-                                    <li><a href="#">Lorem, ipsum.</a></li>
-                                    <li><a href="#">Lorem, ipsum.</a></li>
-                                    <li><a href="#">Lorem, ipsum.</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </nav>
-
-
-                </div>
-            </aside>
+            <ul class="social flex">
+                <li><a href="#" class="fb"></a></li>
+                <li><a href="#" class="tw"></a></li>
+                <li><a href="#" class="in"></a></li>
+            </ul>
         </div>
-    </main>
-    <footer>
-        <div class="footer">
-            <div class="wrapper flex">
-                <div class="footer-info1 info">
-                    <ul>
-                        <li><a href="#">Будинки</a></li>
-                        <li><a href="#">Інфраструктура</a></li>
-                        <li><a href="#">Сервіс</a></li>
-                        <li><a href="#">Новини</a></li>
-                    </ul>
-                </div>
-                <div class="footer-info2 info">
-                    <ul>
-                        <li><a href="#">Про компанію</a></li>
-                        <li><a href="#">Страхування</a></li>
-                        <li><a href="#">Контакти</a></li>
-                    </ul>
-                </div>
-                <div class="contacts flex">
-                    <a class="icon" href="tel:380971002525">+38(097) 100-25-25</a>
-                    <a href="tel:380971002525">+38(097) 100-25-25</a>
-                </div>
-                <div class="email flex">
-                    <a class="mail" href="#">hataplus@hata.com.ua</a>
-                    <a class="email1 skype" href="">hataplus</a>
-                </div>
+    </div>
+    <div class="company">
+        <div class="wrapper flex">
+            <div class="logo">
+                <a href="/"><img src="img/logo.png" alt=""></a>
             </div>
-            <div class="footer-bottom ">
-                <p>© Будівельна компанія “Хата Плюс” 2018.</p>
+            <div class="contacts flex">
+                <a class="icon" href="tel:+380971002525">+38(097) 100-25-25</a>
+                <a href="tel:+380971002525">+38(097) 100-25-25</a>
+            </div>
+            <div class="email flex">
+                <a class="mail" href="mailto:hataplus@hata.com.ua">hataplus@hata.com.ua</a>
+                <a class="skype" href="skype:hataplus">hataplus</a>
+            </div>
+            <div class="buttom">
+                <a href="#">Замовити Дзвінок</a>
             </div>
         </div>
-    </footer>
+    </div>
+</header>
+
+<main>
+    <div class="banner">
+        <div class="text">
+            <p class="text1">Пропозиція місяця</p>
+            <p class="text2">Ми пропонуємо великий вибір котеджів “під ключ” за самими низькими цінами!</p>
+            <p class="text3"><b>5999</b> грн / м<sup>2</sup></p>
+        </div>
+    </div>
+    <div class="wrapper flex">
+        <div>
+            <div class="maininfo">
+                <article>
+                    <h1>Компанія “Хата Плюс”</h1>
+                </article>
+                <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж і насолоджуватися життям в гармонії з природою. Дійсно, для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою віддушиною і порятунком від сумній життя в багатоповерхівках спальних районів.</p>
+                <p>Крім цього, заміські котеджі “Хата Плюс” від забудовника — це найбільш вигідна цінова пропозиція по співвідношенню площа / вартість, оскільки у вартість домоволодіння входить також земельна ділянка, на якому можна не тільки посадити сад, але облаштувати зону відпочинку, спорудити сауну, поставити альтанку і барбекю.</p>
+                <a href="#">Детальніше про нас</a>
+                <hr>
+            </div>
+
+            <div class="popular-project">
+                <h2>Популярні проекти</h2>
+                <div class="project flex">
+                    <figure class="edmonton house">
+                        <img src="img/Edmonton.jpg" alt="">
+                        <a href="edmonton.html">
+                            <h2>EDMONTON (338 м<sup>2</sup>)</h2>
+                        </a>
+                        <p>Загальна площа будови: 312 м<sup>2</sup></p>
+                        <p>Кількість спалень: 4</p>
+                        <p>Гараж: 2 авто</p>
+                    </figure>
+
+                    <figure class="house Montreal">
+                        <img src="img/Montreal.jpg" alt="">
+                        <a href="#">
+                            <h2>MONTREAL (332 м<sup>2</sup>)</h2>
+                        </a>
+                        <p>Загальна площа будови: 290 м<sup>2</sup></p>
+                        <p>Кількість спалень: 3</p>
+                        <p>Гараж: 2 авто</p>
+                    </figure>
+                    <figure class="calgary house">
+                        <img src="img/Calgary.jpg" alt="">
+                        <a href="#">
+                            <h2>CALGARY (294 м<sup>2</sup>)</h2>
+                        </a>
+                        <p>Загальна площа будови: 272 м<sup>2</sup></p>
+                        <p>Кількість спалень: 3</p>
+                        <p>Гараж: 2 авто</p>
+                    </figure>
+                </div>
+            </div>
+        </div>
+
+        <aside>
+            <div class="category-project">
+                <p>Категорії проектів</p>
+                <nav>
+                    <ul>
+                        <li><a class="proga" href="#">Генеральний план</a>
+                            <ul>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="proga" href="#">Навколишнє середовище</a>
+                            <ul>
+                                <li><a href="#">Продані</a></li>
+                                <li><a href="#">Заброньованні</a></li>
+                                <li><a href="#">В процесі будівництва</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="proga" href="#">Умови придбання</a>
+                            <ul>
+                                <li><a href="#">Lorem</a></li>
+                                <li><a href="#">Lorem, ipsum.</a></li>
+                                <li><a href="#">Lorem, ipsum.</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="proga" href="#">Загородні котеджі</a>
+                            <ul>
+                                <li><a href="#">Lorem, ipsum.</a></li>
+                                <li><a href="#">Lorem, ipsum.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="proga" href="#">Інфраструктура</a>
+                            <ul>
+                                <li><a href="#">Lorem, ipsum.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="proga" href="#">Готові будинки</a>
+                            <ul>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                            </ul>
+                        </li>
+                        <li><a class="proga" href="#">Проекти бань</a>
+                            <ul>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                <li><a href="#">Lorem, ipsum dolor.</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </aside>
+    </div>
+</main>
+
+<footer>
+    <div class="footer">
+        <div class="wrapper flex">
+            <div class="footer-info1">
+                <ul>
+                    <li><a href="#">Головна</a></li>
+                    <li><a href="#">Про компанію</a></li>
+                    <li><a href="#">Наші будівлі</a></li>
+                    <li><a href="#">Акції</a></li>
+                    <li><a href="#">Контакти</a></li>
+                </ul>
+            </div>
+            <div class="footer-info2">
+                <ul>
+                    <li><a href="#">Політика конфіденційності</a></li>
+                    <li><a href="#">Угода користувача</a></li>
+                    <li><a href="#">Повернення товару</a></li>
+                </ul>
+            </div>
+            <ul class="social flex">
+                <li><a href="#" class="fb"></a></li>
+                <li><a href="#" class="tw"></a></li>
+                <li><a href="#" class="in"></a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 
 </html>
